--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,10 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="background_black">#081B25</color>
+    <color name="text_grey">#65757E</color>
+    <color name="card_background">#152C39</color>
+
+
 </resources>
